<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hefesto</string>
    <string name="ponto">Ponto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_adicionar_horario">Adicionar Horário</string>
    <string name="action_excluir_tudo">Excluir tudo</string>
    <string name="bater_ponto">Bater Ponto</string>
    <string name="entrar">ENTRAR</string>
    <string name="sair">SAIR</string>
    <string name="salvar">SALVAR</string>
    <string name="saldo">SALDO MÊS</string>
    <string name="tempo_restante">TEMPO RESTANTE</string>
    <string name="tempo_trabalhado">TEMPO TRABALHADO</string>
    <string name="horario_salvo_sucesso">Horário salvo com sucesso.</string>
    <string name="configuracoes_salvas_sucesso">Configurações salvas com sucesso.</string>
    <string name="arquivo_salvo">Backup salvo!</string>
    <string name="arquivo_importado">Importação completa!</string>
    <string name="fim_timer">Já pode ir!</string>
    <string name="ajustar_hora">AJUSTAR P/\n1 HORA</string>
    <string name="ajustar_hora_confirmacao">Tem certeza que quer ajustar o intervalo para 1 hora?</string>
    <string name="confirmar_exportar">Tem certeza que quer importar horários existentes?</string>
    <string name="confirmar_importar">Tem certeza que quer fazer o backup? Essa ação poderá sobrescrever backups já existentes.</string>
    <string name="apagar_hora_confirmacao">Tem certeza que quer apagar o horário?</string>
    <string name="apagar_dia_confirmacao">Tem certeza que quer apagar o dia inteiro?</string>
    <string name="apagar_tudo_confirmacao">Tem certeza que quer apagar todo o histórico?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="title_activity_nfc">NFCActivity</string>
    <string name="title_activity_adicionar_hora">Adicionar Horário</string>
    <string name="action_importar">Importar</string>
    <string name="action_exportar">Exportar</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="tempo_jornada_label">Jornada de Trabalho:</string>
    <string name="widget_saldo">Hefesto (Saldo)</string>
    <string name="widget_tempo_trabalhado">Hefesto (Tempo Trabalhado)</string>
    <string name="widget_contagem_regressiva">Hefesto (Contagem Regressiva)</string>
    <string name="title_notification_jornada">Oba!</string>
    <string name="text_notification_jornada">Você completou sua jornada de trabalho!</string>
    <string name="txt_est_saida">saída est.</string>
    <string name="title_activity_grafico">Gráfico de Horas</string>
    <string name="txt_horas_trabalhadas">Horas Trabalhadas</string>
    <string name="action_sign_in">Fazer login</string>
    <string name="txt_mood_title">Como você está se sentindo?</string>
    <string name="apagar_mood_confirmacao">Tem certeza que quer apagar este humor?</string>
    <string name="widget_bater_ponto">Hefesto (Bater Ponto)</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="action_ranking">Ranking</string>
    <string name="vc_possui_saldo">Você já trabalhou mais que</string>
    <string name="usuarios">usuários</string>
    <string name="vc_esta">Você está em</string>
    <string name="carregando">carregando..</string>
    <string name="voce">Você</string>
    <string name="txt_saldo_usuarios">Saldo de usuários</string>
    <string name="rnk_explc">O ranking funciona com base no saldo dos usuários.</string>
    <string name="grf_explc">Gráfico das horas trabalhadas em</string>
    <string name="falta_salva_sucesso">Falta salva com sucesso.</string>
    <string name="action_adicionar_falta">Adicionar Falta</string>
    <string name="vc_faltou">VOCÊ FALTOU ESSE DIA</string>
    <string name="apagar_falta_confirmacao">Tem certeza que quer apagar a falta?</string>
    <string name="importar_confirmacao">Tem certeza que quer importar os registros salvos? Essa operação não poderá ser desfeita.</string>
    <string name="exportar_confirmacao">Tem certeza que exportar os registros atuais? Essa ação sobrescreverá o backup atual.</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="action_main">Histórico</string>
    <string name="saldoTotal">SALDO TOTAL</string>
    <string name="add_hora_explc">Aqui você pode adicionar horários em que esqueceu de bater o ponto.</string>
    <string name="add_falta_explc">Aqui você pode adicionar adicionar os dias em que faltou.</string>
    <string name="tempo_saldo_acumulado">Saldo Acumulado:</string>
    <string name="saldo_negativo">Saldo negativo</string>
    <string name="horas">Horas:</string>
    <string name="minutos">Minutos:</string>
    <string name="txt_comentario">Comentário</string>
    <string name="apagar_comment_confirmacao">Tem certeza que deseja apagar esse comentário?</string>
    <string name="botao_proximo">Próximo</string>
    <string name="botao_anterior">Anterior</string>
</resources>
