<ScrollView 
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="3dp"
	    android:paddingLeft="3dp"
	    android:paddingRight="3dp"
	    android:paddingTop="3dp" 
    	android:id="@+id/scrollRanking"
      	tools:context="com.fjmob.ponto.MainActivity$PlaceholderFragment" xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:gravity="center_horizontal">
	     
        
        
         <android.support.v7.widget.CardView android:id="@+id/cardRankingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginBottom="2dp">   
        
            
             <LinearLayout android:id="@+id/txtEplcLyt"
			    android:orientation="vertical"
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:gravity="center_horizontal"
			    android:padding="16dp">
            
                 <TextView 
			          android:id="@+id/txtEplc"
			        android:layout_width="fill_parent" 
			        android:layout_height="wrap_content" 
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_gravity="center_vertical|center_horizontal"
			        android:textSize="20sp"
			        android:textColor="@color/primary_text"
			        android:text="@string/rnk_explc"></TextView>
                 
                 
            </LinearLayout>
            
        </android.support.v7.widget.CardView>
        
        
        
        
        
        
        <android.support.v7.widget.CardView android:id="@+id/cardRankingMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginBottom="2dp">   
        
            
             <LinearLayout 
			    android:orientation="vertical"
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:gravity="center_horizontal"
			    android:padding="16dp">
            
                 <TextView 
			          android:id="@+id/txt_rnk_vc_esta"
			        android:layout_width="fill_parent" 
			        android:layout_height="wrap_content" 
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_gravity="center_vertical|center_horizontal"
			        android:textSize="20sp"
			        android:textColor="@color/primary_text"
			        android:text="@string/vc_esta"></TextView>
                 <TextView 
			          android:id="@+id/txt_rnk_escala"
			        android:layout_width="fill_parent" 
			        android:layout_height="wrap_content" 
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_gravity="center_vertical|center_horizontal"
			        android:textSize="24sp"
			        android:textColor="@color/primary_dark"
			        android:text="@string/carregando"></TextView>
                
            </LinearLayout>
            
        </android.support.v7.widget.CardView>
        
        
        
        
        <android.support.v7.widget.CardView android:id="@+id/cardRankingUsuariosMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginBottom="2dp">   
        
            
             <LinearLayout 
			    android:orientation="vertical"
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:gravity="center_horizontal"
			    android:padding="16dp">
            
                 <TextView 
			          android:id="@+id/txt_rnk_vc_saldo"
			        android:layout_width="fill_parent" 
			        android:layout_height="wrap_content" 
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_gravity="center_vertical|center_horizontal"
			        android:textSize="20sp"
			        android:textColor="@color/primary_text"
			        android:text="@string/vc_possui_saldo"></TextView>
                 <TextView 
			          android:id="@+id/txt_rnk_saldo"
			        android:layout_width="fill_parent" 
			        android:layout_height="wrap_content" 
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_gravity="center_vertical|center_horizontal"
			        android:textSize="24sp"
			        android:textColor="@color/primary_dark"
			        android:text="@string/carregando"></TextView>
                 <TextView 
			          android:id="@+id/txt_rnk_usuarios"
			        android:layout_width="fill_parent" 
			        android:layout_height="wrap_content" 
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_gravity="center_vertical|center_horizontal"
			        android:textSize="20sp"
			        android:textColor="@color/primary_text"
			        android:text="@string/usuarios"></TextView>
            </LinearLayout>
            
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView android:id="@+id/cardRankingGrafico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginBottom="2dp">   
        
            
             <LinearLayout android:id="@+id/graficoRanking"
			    android:orientation="vertical"
			    android:layout_height="300dp"
			    android:layout_width="fill_parent"
			    android:gravity="center_horizontal"
			    android:padding="16dp">
            
                 
            </LinearLayout>
            
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>
